--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/welcomeFragment">
+
+    <fragment
+        android:id="@+id/welcomeFragment"
+        android:name="com.hxl.cryptonumismatist.presentation.fragments.welcome.WelcomeFragment"
+        android:label="fragment_welcome"
+        tools:layout="@layout/fragment_welcome">
+        <action
+            android:id="@+id/action_welcomeFragment_to_coinsFragment"
+            app:destination="@id/coinsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/coinsFragment"
+        android:name="com.hxl.cryptonumismatist.presentation.fragments.coins.main.CoinsFragment"
+        android:label="fragment_coins"
+        tools:layout="@layout/fragment_coins">
+        <action
+            android:id="@+id/action_coinsFragment_to_coinDetailsFragment"
+            app:destination="@id/coinDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/coinDetailsFragment"
+        android:name="com.hxl.cryptonumismatist.presentation.fragments.coins.details.CoinDetailsFragment"
+        android:label="fragment_coin_details"
+        tools:layout="@layout/fragment_coin_details" />
 
 </navigation>
