--- a/app/src/main/res/layout/item_walkthrough.xml
+++ b/app/src/main/res/layout/item_walkthrough.xml
@@ -51,7 +51,8 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/gl_end" />
+            app:layout_constraintTop_toTopOf="@+id/gl_end"
+            tools:text="Title" />
 
         <TextView
             android:id="@+id/tv_walkthrough_description"
@@ -64,6 +65,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_walkthrough_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_walkthrough_title"
+            tools:text="Description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
