--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -30,14 +30,15 @@
         <me.relex.circleindicator.CircleIndicator3
             android:id="@+id/tab_indicator"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="32dp"
+            app:ci_drawable="@drawable/indicator_radius"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_next"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/btn_next">
 
         </me.relex.circleindicator.CircleIndicator3>
 
