--- a/app/src/main/res/layout/item_walk_through.xml
+++ b/app/src/main/res/layout/item_walk_through.xml
@@ -29,10 +29,10 @@
             app:layout_constraintGuide_percent="0.50" />
 
         <ImageView
-            android:id="@+id/img_walkthrough"
+            android:id="@+id/img_walk_through"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:contentDescription="@string/cd_img_walkthrough"
+            android:contentDescription="@string/cd_img_walk_through"
             app:layout_constraintBottom_toTopOf="@+id/gl_end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tv_walkthrough_title"
+            android:id="@+id/tv_walk_through_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -55,7 +55,7 @@
             tools:text="Title" />
 
         <TextView
-            android:id="@+id/tv_walkthrough_description"
+            android:id="@+id/tv_walk_through_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -65,7 +65,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_walkthrough_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_walk_through_title"
             tools:text="Description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
