--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="seed" tools:keep="@color/seed">#00c555</color>
+
+<resources>
+    <color name="seed">#00c555</color>
     <color name="md_theme_light_primary">#006E2C</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#68FF8A</color>
     <color name="md_theme_light_onPrimaryContainer">#002108</color>
-    <color name="md_theme_light_secondary">#006E1C</color>
+    <color name="md_theme_light_secondary">#516351</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#70FF76</color>
-    <color name="md_theme_light_onSecondaryContainer">#002204</color>
-    <color name="md_theme_light_tertiary">#006E03</color>
+    <color name="md_theme_light_secondaryContainer">#D4E8D1</color>
+    <color name="md_theme_light_onSecondaryContainer">#0F1F11</color>
+    <color name="md_theme_light_tertiary">#1A6C31</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#76FF63</color>
-    <color name="md_theme_light_onTertiaryContainer">#002200</color>
+    <color name="md_theme_light_tertiaryContainer">#A3F5AA</color>
+    <color name="md_theme_light_onTertiaryContainer">#002108</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
@@ -28,21 +29,22 @@
     <color name="md_theme_light_inverseOnSurface">#F0F1EB</color>
     <color name="md_theme_light_inverseSurface">#2E312D</color>
     <color name="md_theme_light_inversePrimary">#3FE26E</color>
-    <color name="md_theme_light_shadow" tools:keep="@color/md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_shadow">#000000</color>
     <color name="md_theme_light_surfaceTint">#006E2C</color>
-    <color name="md_theme_light_surfaceTintColor" tools:ignore="UnusedResources">#006E2C</color>
+    <color name="md_theme_light_outlineVariant">#C1C9BE</color>
+    <color name="md_theme_light_scrim">#000000</color>
     <color name="md_theme_dark_primary">#3FE26E</color>
     <color name="md_theme_dark_onPrimary">#003913</color>
     <color name="md_theme_dark_primaryContainer">#00531F</color>
     <color name="md_theme_dark_onPrimaryContainer">#68FF8A</color>
-    <color name="md_theme_dark_secondary">#00E544</color>
-    <color name="md_theme_dark_onSecondary">#00390A</color>
-    <color name="md_theme_dark_secondaryContainer">#005312</color>
-    <color name="md_theme_dark_onSecondaryContainer">#70FF76</color>
-    <color name="md_theme_dark_tertiary">#39E431</color>
-    <color name="md_theme_dark_onTertiary">#003A01</color>
-    <color name="md_theme_dark_tertiaryContainer">#005302</color>
-    <color name="md_theme_dark_onTertiaryContainer">#76FF63</color>
+    <color name="md_theme_dark_secondary">#B8CCB5</color>
+    <color name="md_theme_dark_onSecondary">#243425</color>
+    <color name="md_theme_dark_secondaryContainer">#3A4B3A</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D4E8D1</color>
+    <color name="md_theme_dark_tertiary">#88D990</color>
+    <color name="md_theme_dark_onTertiary">#003913</color>
+    <color name="md_theme_dark_tertiaryContainer">#00531F</color>
+    <color name="md_theme_dark_onTertiaryContainer">#A3F5AA</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
@@ -57,7 +59,9 @@
     <color name="md_theme_dark_inverseOnSurface">#1A1C19</color>
     <color name="md_theme_dark_inverseSurface">#E2E3DD</color>
     <color name="md_theme_dark_inversePrimary">#006E2C</color>
-    <color name="md_theme_dark_shadow" tools:keep="@color/md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_shadow">#000000</color>
     <color name="md_theme_dark_surfaceTint">#3FE26E</color>
-    <color name="md_theme_dark_surfaceTintColor" tools:keep="@color/md_theme_dark_surfaceTintColor">#3FE26E</color>
+    <color name="md_theme_dark_outlineVariant">#424940</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
+
