feat(coins/ui): add rv to fragment and create coin item layout

--- a/app/src/main/res/layout/fragment_coins.xml
+++ b/app/src/main/res/layout/fragment_coins.xml
@@ -6,6 +6,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.fragments.coins.main.CoinsFragment">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_coins"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
 </layout>
