--- a/app/src/main/res/layout/item_walk_through.xml
+++ b/app/src/main/res/layout/item_walk_through.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         android:padding="30dp">
 
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_start"
             android:layout_width="wrap_content"
@@ -28,7 +27,7 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.50" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_walk_through"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
@@ -39,30 +38,31 @@
             app:layout_constraintTop_toTopOf="@+id/gl_start"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_walk_through_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:textAppearance="?attr/textAppearanceHeadline4"
             android:elegantTextHeight="true"
             android:text="@{title}"
             android:textAlignment="center"
-            android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/gl_end"
             tools:text="Title" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_walk_through_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:elegantTextHeight="true"
+            android:gravity="center"
             android:text="@{description}"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textAppearance="?attr/textAppearanceBodyLarge"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_walk_through_title"
