--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,4 +9,4 @@
     app:defaultNavHost="true"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:navGraph="@navigation/nav_launch" />
+    app:navGraph="@navigation/nav_root" />
