--- a/app/src/main/res/navigation/nav_root.xml
+++ b/app/src/main/res/navigation/nav_root.xml
@@ -23,7 +23,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.hxl.cryptonumismatist.ui.fragments.main.MainFragment"
+        android:name="com.hxl.cryptonumismatist.ui.fragments.navigation.NavigationFragment"
         android:label="MainFragment" >
         <action
             android:id="@+id/action_mainFragment_to_coinDetailsFragment2"
