--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -8,18 +8,5 @@
         android:id="@+id/coinsFragment"
         android:name="com.hxl.cryptonumismatist.ui.fragments.coins.main.CoinsFragment"
         android:label="fragment_coins"
-        tools:layout="@layout/fragment_coins">
-        <action
-            android:id="@+id/action_coinsFragment_to_coinDetailsFragment"
-            app:destination="@id/coinDetailsFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-    </fragment>
-    <fragment
-        android:id="@+id/coinDetailsFragment"
-        android:name="com.hxl.cryptonumismatist.ui.fragments.coins.details.CoinDetailsFragment"
-        android:label="fragment_coin_details"
-        tools:layout="@layout/fragment_coin_details" />
+        tools:layout="@layout/fragment_coins" />
 </navigation>
