--- a/app/src/main/res/navigation/nav_root.xml
+++ b/app/src/main/res/navigation/nav_root.xml
@@ -11,8 +11,8 @@
         android:label="fragment_welcome"
         tools:layout="@layout/fragment_welcome">
         <action
-            android:id="@+id/action_welcomeFragment_to_mainFragment"
-            app:destination="@id/mainFragment"
+            android:id="@+id/welcomeFragment_to_navigationFragment"
+            app:destination="@id/navigationFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
@@ -22,21 +22,22 @@
     </fragment>
 
     <fragment
-        android:id="@+id/mainFragment"
+        android:id="@+id/navigationFragment"
         android:name="com.hxl.cryptonumismatist.ui.fragments.navigation.NavigationFragment"
-        android:label="MainFragment" >
+        android:label="fragment_navigation"
+        tools:layout="fragment_navigation">
         <action
-            android:id="@+id/action_mainFragment_to_coinDetailsFragment2"
+            android:id="@+id/mainFragment_to_coinDetailsFragment"
             app:destination="@id/coinDetailsFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"
-            app:popUpTo="@id/mainFragment"/>
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/coinDetailsFragment"
         android:name="com.hxl.cryptonumismatist.ui.fragments.coins.details.CoinDetailsFragment"
-        android:label="CoinDetailsFragment" />
+        android:label="fragment_coin_details"
+        tools:layout="@layout/fragment_coin_details"/>
 
 </navigation>
