--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,67 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <resources>
-    <color name="seed">#00c555</color>
-    <color name="md_theme_light_primary">#006E2C</color>
+    <color name="seed">#85CDFD</color>
+    <color name="md_theme_light_primary">#00658F</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#68FF8A</color>
-    <color name="md_theme_light_onPrimaryContainer">#002108</color>
-    <color name="md_theme_light_secondary">#516351</color>
+    <color name="md_theme_light_primaryContainer">#C7E7FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001E2E</color>
+    <color name="md_theme_light_primaryFixed">#C7E7FF</color>
+    <color name="md_theme_light_onPrimaryFixed">#001E2E</color>
+    <color name="md_theme_light_primaryFixedDim">#86CFFF</color>
+    <color name="md_theme_light_onPrimaryFixedVariant">#004C6D</color>
+    <color name="md_theme_light_secondary">#4F616E</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#D4E8D1</color>
-    <color name="md_theme_light_onSecondaryContainer">#0F1F11</color>
-    <color name="md_theme_light_tertiary">#1A6C31</color>
+    <color name="md_theme_light_secondaryContainer">#D2E5F5</color>
+    <color name="md_theme_light_onSecondaryContainer">#0B1D29</color>
+    <color name="md_theme_light_secondaryFixed">#D2E5F5</color>
+    <color name="md_theme_light_onSecondaryFixed">#0B1D29</color>
+    <color name="md_theme_light_secondaryFixedDim">#B6C9D8</color>
+    <color name="md_theme_light_onSecondaryFixedVariant">#384956</color>
+    <color name="md_theme_light_tertiary">#355CA8</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#A3F5AA</color>
-    <color name="md_theme_light_onTertiaryContainer">#002108</color>
+    <color name="md_theme_light_tertiaryContainer">#D9E2FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#001943</color>
+    <color name="md_theme_light_tertiaryFixed">#D9E2FF</color>
+    <color name="md_theme_light_onTertiaryFixed">#001943</color>
+    <color name="md_theme_light_tertiaryFixedDim">#AFC6FF</color>
+    <color name="md_theme_light_onTertiaryFixedVariant">#16448F</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FCFDF7</color>
-    <color name="md_theme_light_onBackground">#1A1C19</color>
-    <color name="md_theme_light_surface">#FCFDF7</color>
-    <color name="md_theme_light_onSurface">#1A1C19</color>
-    <color name="md_theme_light_surfaceVariant">#DDE5D9</color>
-    <color name="md_theme_light_onSurfaceVariant">#424940</color>
-    <color name="md_theme_light_outline">#727970</color>
-    <color name="md_theme_light_inverseOnSurface">#F0F1EB</color>
-    <color name="md_theme_light_inverseSurface">#2E312D</color>
-    <color name="md_theme_light_inversePrimary">#3FE26E</color>
+    <color name="md_theme_light_background">#FCFCFF</color>
+    <color name="md_theme_light_onBackground">#191C1E</color>
+    <color name="md_theme_light_outline">#71787E</color>
+    <color name="md_theme_light_inverseOnSurface">#F0F0F3</color>
+    <color name="md_theme_light_inverseSurface">#2E3133</color>
+    <color name="md_theme_light_inversePrimary">#86CFFF</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#006E2C</color>
-    <color name="md_theme_light_outlineVariant">#C1C9BE</color>
+    <color name="md_theme_light_surfaceTint">#00658F</color>
+    <color name="md_theme_light_outlineVariant">#C1C7CE</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#3FE26E</color>
-    <color name="md_theme_dark_onPrimary">#003913</color>
-    <color name="md_theme_dark_primaryContainer">#00531F</color>
-    <color name="md_theme_dark_onPrimaryContainer">#68FF8A</color>
-    <color name="md_theme_dark_secondary">#B8CCB5</color>
-    <color name="md_theme_dark_onSecondary">#243425</color>
-    <color name="md_theme_dark_secondaryContainer">#3A4B3A</color>
-    <color name="md_theme_dark_onSecondaryContainer">#D4E8D1</color>
-    <color name="md_theme_dark_tertiary">#88D990</color>
-    <color name="md_theme_dark_onTertiary">#003913</color>
-    <color name="md_theme_dark_tertiaryContainer">#00531F</color>
-    <color name="md_theme_dark_onTertiaryContainer">#A3F5AA</color>
+    <color name="md_theme_light_surface">#F9F9FC</color>
+    <color name="md_theme_light_onSurface">#191C1E</color>
+    <color name="md_theme_light_surfaceVariant">#DDE3EA</color>
+    <color name="md_theme_light_onSurfaceVariant">#41484D</color>
+    <color name="md_theme_light_surfaceContainerHighest">#E2E2E5</color>
+    <color name="md_theme_light_surfaceContainerHigh">#E7E8EB</color>
+    <color name="md_theme_light_surfaceContainer">#EDEEF0</color>
+    <color name="md_theme_light_surfaceContainerLow">#F3F3F6</color>
+    <color name="md_theme_light_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_light_surfaceDim">#D9DADD</color>
+    <color name="md_theme_light_surfaceBright">#F9F9FC</color>
+    <color name="md_theme_dark_primary">#86CFFF</color>
+    <color name="md_theme_dark_onPrimary">#00344C</color>
+    <color name="md_theme_dark_primaryContainer">#004C6D</color>
+    <color name="md_theme_dark_onPrimaryContainer">#C7E7FF</color>
+    <color name="md_theme_dark_primaryFixed">#C7E7FF</color>
+    <color name="md_theme_dark_onPrimaryFixed">#001E2E</color>
+    <color name="md_theme_dark_primaryFixedDim">#86CFFF</color>
+    <color name="md_theme_dark_onPrimaryFixedVariant">#004C6D</color>
+    <color name="md_theme_dark_secondary">#B6C9D8</color>
+    <color name="md_theme_dark_onSecondary">#21323E</color>
+    <color name="md_theme_dark_secondaryContainer">#384956</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D2E5F5</color>
+    <color name="md_theme_dark_secondaryFixed">#D2E5F5</color>
+    <color name="md_theme_dark_onSecondaryFixed">#0B1D29</color>
+    <color name="md_theme_dark_secondaryFixedDim">#B6C9D8</color>
+    <color name="md_theme_dark_onSecondaryFixedVariant">#384956</color>
+    <color name="md_theme_dark_tertiary">#AFC6FF</color>
+    <color name="md_theme_dark_onTertiary">#002D6C</color>
+    <color name="md_theme_dark_tertiaryContainer">#16448F</color>
+    <color name="md_theme_dark_onTertiaryContainer">#D9E2FF</color>
+    <color name="md_theme_dark_tertiaryFixed">#D9E2FF</color>
+    <color name="md_theme_dark_onTertiaryFixed">#001943</color>
+    <color name="md_theme_dark_tertiaryFixedDim">#AFC6FF</color>
+    <color name="md_theme_dark_onTertiaryFixedVariant">#16448F</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1A1C19</color>
-    <color name="md_theme_dark_onBackground">#E2E3DD</color>
-    <color name="md_theme_dark_surface">#1A1C19</color>
-    <color name="md_theme_dark_onSurface">#E2E3DD</color>
-    <color name="md_theme_dark_surfaceVariant">#424940</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C1C9BE</color>
-    <color name="md_theme_dark_outline">#8B9389</color>
-    <color name="md_theme_dark_inverseOnSurface">#1A1C19</color>
-    <color name="md_theme_dark_inverseSurface">#E2E3DD</color>
-    <color name="md_theme_dark_inversePrimary">#006E2C</color>
+    <color name="md_theme_dark_background">#191C1E</color>
+    <color name="md_theme_dark_onBackground">#E2E2E5</color>
+    <color name="md_theme_dark_outline">#8B9198</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C1E</color>
+    <color name="md_theme_dark_inverseSurface">#E2E2E5</color>
+    <color name="md_theme_dark_inversePrimary">#00658F</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#3FE26E</color>
-    <color name="md_theme_dark_outlineVariant">#424940</color>
+    <color name="md_theme_dark_surfaceTint">#86CFFF</color>
+    <color name="md_theme_dark_outlineVariant">#41484D</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="md_theme_dark_surface">#111416</color>
+    <color name="md_theme_dark_onSurface">#C5C6C9</color>
+    <color name="md_theme_dark_surfaceVariant">#41484D</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C1C7CE</color>
+    <color name="md_theme_dark_surfaceContainerHighest">#333537</color>
+    <color name="md_theme_dark_surfaceContainerHigh">#282A2C</color>
+    <color name="md_theme_dark_surfaceContainer">#1D2022</color>
+    <color name="md_theme_dark_surfaceContainerLow">#191C1E</color>
+    <color name="md_theme_dark_surfaceContainerLowest">#0C0E11</color>
+    <color name="md_theme_dark_surfaceDim">#111416</color>
+    <color name="md_theme_dark_surfaceBright">#37393C</color>
 </resources>
-
