feat(ui): add new animations to welcome page

--- a/app/src/main/res/layout/item_walk_through.xml
+++ b/app/src/main/res/layout/item_walk_through.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.25" />
+            app:layout_constraintGuide_percent="0.15" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_end"
@@ -27,15 +27,17 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.50" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/img_walk_through"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="@string/cd_img_walk_through"
             app:layout_constraintBottom_toTopOf="@+id/gl_end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/gl_start"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
