--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -59,10 +59,13 @@
             android:id="@+id/tv_skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
+            android:paddingLeft="34dp"
+            android:paddingTop="24dp"
+            android:paddingRight="34dp"
+            android:paddingBottom="24dp"
             android:text="@string/tv_skip"
             android:textAppearance="?attr/textAppearanceLabelLarge"
+            android:textColor="?attr/colorOnBackground"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
