--- a/app/src/main/res/layout/item_walk_through.xml
+++ b/app/src/main/res/layout/item_walk_through.xml
@@ -45,10 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:textAppearance="?attr/textAppearanceHeadline4"
             android:elegantTextHeight="true"
             android:text="@{title}"
             android:textAlignment="center"
+            android:textAppearance="?attr/textAppearanceHeadline4"
+            android:textColor="?attr/colorOnBackground"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +66,7 @@
             android:text="@{description}"
             android:textAlignment="center"
             android:textAppearance="?attr/textAppearanceBodyLarge"
+            android:textColor="?attr/colorOnBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_walk_through_title"
