--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/menu_bookmarks"
-        android:icon="@drawable/bookmark"
-        app:showAsAction="ifRoom"
-        android:title="@string/menu_bookmarks" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
         android:id="@+id/menu_coins"
         android:enabled="true"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/monitoring"
         android:title="@string/menu_coins" />
 
     <item
+        android:id="@+id/menu_exchanges"
+        android:enabled="true"
+        android:icon="@drawable/exchanges"
+        android:title="@string/menu_exchanges" />
+
+    <item
+        android:id="@+id/menu_bookmarks"
+        android:icon="@drawable/bookmark"
+        android:title="@string/menu_bookmarks" />
+
+    <item
         android:id="@+id/menu_settings"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/settings"
         android:title="@string/menu_setting" />
 
