--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -34,6 +34,8 @@
         <item name="bookmark">@color/bookmark_dark</item>
         <item name="bookmark_ripple">@color/bookmark_dark_ripple</item>
         <item name="background_ripple">@color/background_dark_ripple</item>
+
+        <item name="growth">@color/growth_dark</item>
     </style>
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
