--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,8 @@
         <item name="bookmark">@color/bookmark_light</item>
         <item name="bookmark_ripple">@color/bookmark_light_ripple</item>
         <item name="background_ripple">@color/background_light_ripple</item>
+
+        <item name="growth">@color/growth_light</item>
     </style>
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
