--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,13 @@
             @style/ShapeAppearance.Material3.Corner.None
         </item>
     </style>
+
+    <style name="CN_Bookmark" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="buttonTint">@color/bookmark_colors</item>
+        <item name="android:background">@drawable/bookmark_background</item>
+    </style>
+
+    <style name="CN_Chip" parent="Widget.Material3.Chip.Filter">
+        <item name="chipBackgroundColor">@color/chip_colors</item>
+    </style>
 </resources>
