feat(ui/coins): update search-bar color

--- a/app/src/main/res/layout/fragment_coins.xml
+++ b/app/src/main/res/layout/fragment_coins.xml
@@ -39,6 +39,7 @@
                 style="@style/CN_SearchBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="?attr/statusBarColor"
                 android:hint="@string/hint_search"
                 app:defaultMarginsEnabled="false" />
         </com.google.android.material.appbar.AppBarLayout>
